# jisho

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.c
include/: jisho.h
src/: jisho.c
